<resources>
    <string name="app_name">Teste de Performance 03</string>
    <string name="password">Password</string>
    <string name="new_password">New password</string>
    <string name="current_password">Current password</string>
    <string name="name">Full name</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="repeat_password">Confirm password</string>
    <string name="signup">Sign Up</string>
    <string name="text_signup">Don\'t have an account?</string>
    <string name="link_signup">Sign up</string>
    <string name="all">TODO</string>
    <string name="user_email">userdefault@gmail.com</string>
    <string name="user_name">User Default</string>
    <string name="update_profile">Save</string>
    <string name="delete_account">Delete account</string>
    <string name="change_password">Change password</string>
    <string name="forget_password">Forget password?</string>
    <string name="title_check_email">Email verification</string>
    <string name="recovery_account">Send</string>
    <string name="logged">You are logged in!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="title_recover">Recover</string>
    <string name="recover_description">Enter your email address in order to send you the steps to change your password.</string>
    <string name="title_password_recovery">Password recovery</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_map">Map</string>
    <string name="title_profile">Profile</string>
    <string name="subject_title">Desenvolvimento Android</string>
    <string name="create_your_account">Create your account</string>
    <string name="cancel">Cancel</string>
    <string name="delete_icon">Delete icon</string>
    <string name="new_recipe_add_buttom">New recipe add buttom</string>
    <string name="save_btn">Save</string>
    <string name="cancel_btn">Cancel</string>
    <string name="save_on_file">Save on file</string>
    <string name="enter_recipe_style">Enter recipe style</string>
    <string name="enter_recipe_name">Enter recipe name</string>
    <string name="create_date">Create date</string>
    <string name="enter_neighborhood_name">Enter neighborhood name</string>
    <string name="enter_business_name">Enter business name</string>
    <string name="start_survey">Start survey</string>
    <string name="add_new_survey">Add new survey</string>
    <string name="first_question">Este estabelecimento tem um POP definido por um nutricionista?</string>
    <string name="second_question">Este estabelecimento implementou os POP\'s em vigor?</string>
    <string name="third_question">Este estabelecimento treina seu funcionários com relação às boas práticas?</string>
    <string name="fourth_question">Este estabelecimento verifica a higiene pessoal dos manipuladores?</string>
    <string name="fifth_question">Este estabelecimento verifica semanalmente a validade dos produtos fabricados?</string>
    <string name="sixth_question">Este estabelecimento faz controle de pragas semestralmente?</string>
    <string name="save_survey">Save survey</string>
    <string name="answer">Sim ou não?</string>
</resources>