<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/titleTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="Dados do estabelecimento"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/businessTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/businessEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_business_name"
                        android:singleLine="true"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/neighborhoodTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/neighborhoodEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_neighborhood_name"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createDateTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/createDateEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/create_date"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        tools:ignore="TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="380dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/questionsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textAlignment="center"
                    android:text="Responda sim ou não para estas perguntas"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/firstQuestionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:text="@string/first_question"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/firstEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/secondQuestionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:text="@string/second_question"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/secondTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/secondEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/thirdQuestionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:text="@string/third_question"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/thirdTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/thirdEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/fourthQuestionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:text="@string/fourth_question"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fourthTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fourthEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/fifthQuestionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:text="@string/fifth_question"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fifthTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/fifthEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/sixthQuestionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="15dp"
                    android:text="@string/sixth_question"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/sixthTextInputLayout"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/sixthEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/answer"
                        android:inputType="textEmailAddress"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="380dp"
                android:layout_height="2dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|center_vertical"
                android:padding="15dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/submitButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:minWidth="130dp"
                    android:text="@string/save_btn" />

                <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:minWidth="130dp"
                    android:text="@string/cancel_btn" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>




